--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
       integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./build/bundle.css" />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="./build/bundle.js"></script>
   </head>
 
   <body></body>
