--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css"
     />
     <!--<![endif]-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./build/bundle.css" />
 
