--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Delphi COVID-19</title>
+    <title>COVID-19 Delphi Dashboard</title>
 
     <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
     <link
