--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <title>COVID-19 Delphi Dashboard</title>
 
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
+    <link rel="icon" href="/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/mapbox-gl.css" />
+    <link rel="stylesheet" href="./maps/mapbox-gl.css" />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./build/bundle.css" />
 
