--- a/index.html
+++ b/index.html
@@ -36,7 +36,5 @@
     <script defer src="./build/bundle.js"></script>
   </head>
 
-  <body>
-  <div id="viz"></div>
-  </body>
+  <body></body>
 </html>
