--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
     <script defer src="./build/bundle.js"></script>
   </head>
 
-  <body></body>
+  <body>
+
+  <div id="vizbox"></div>
+
+  </body>
 </html>
