refreshed UI: map in background + options on the top-left

--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,27 @@
     <title>COVID-19 Delphi Dashboard</title>
 
     <link rel="icon" href="/favicon.ico" />
-    <link
+
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
       integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
       crossorigin="anonymous"
-    />
+    /> -->
     <!--[if lte IE 8]>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-old-ie-min.css"
-      />
+      <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-old-ie-min.css" />
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css"
-    />
+    /> -->
     <!--<![endif]-->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./maps/mapbox-gl.css" />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./build/bundle.css" />
