Changing the target div for the app to be one with the id vizbox. If this does not exist it will fall back to document.body.

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,7 @@
     <script defer src="./build/bundle.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div id="vizbox"</div>
+  </body>
 </html>
