--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>COVID-19 Delphi Dashboard</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link rel="icon" href="/favicon.ico" />
+  <title>COVID-19 Delphi Dashboard</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./maps/mapbox-gl.css" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./build/bundle.css" />
+  <link rel="icon" href="/favicon.ico" />
 
-    <script defer src="./build/bundle.js"></script>
-  </head>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+    rel="stylesheet" />
+  <!-- <link rel="stylesheet" href="./maps/mapbox-gl.css" /> -->
+  <link rel="stylesheet" href="./global.css" />
+  <link rel="stylesheet" href="./build/bundle.css" />
 
-  <body>
-    <div id="vizbox"></div>
-  </body>
+  <script defer src="./build/bundle.js"></script>
+</head>
+
+<body>
+  <div id="vizbox"></div>
+</body>
+
 </html>
