--- a/frame.html
+++ b/frame.html
@@ -152,12 +152,14 @@
                 alt="Delphi response team"
                 class=""
                 height="800"
-                src="https://cms-staging.andrew.cmu.edu/covid/images/delphi-response-thumb2-800-min.jpg"
+                src="https://covidcast.cmu.edu/images/montage-800x800-min.jpg"
                 width="800"
               />
             </h1>
             <h2>
-              <a href="covid19-response-team.html"><strong>Delphi COVID-19 Response Team</strong></a>
+              <a href="https://covidcast.cmu.edu/covid19-response-team.html"
+                ><strong>Delphi COVID-19 Response Team</strong></a
+              >
             </h2>
           </div>
         </div>
