--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>COVID-19 Delphi Dashboard</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link rel="icon" href="/favicon.ico" />
+  <title>COVID-19 Delphi Dashboard</title>
 
-    <link rel="stylesheet" href="./maps/mapbox-gl.css" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./build/bundle.css" />
+  <link rel="icon" href="/favicon.ico" />
 
-    <script defer src="./build/bundle.js"></script>
-  </head>
+  <link rel="stylesheet" href="./maps/mapbox-gl.css" />
+  <link rel="stylesheet" href="./global.css" />
+  <link rel="stylesheet" href="./build/bundle.css" />
+  <script src="https://unpkg.com/@webcomponents/custom-elements"></script>
+  <script defer src="./build/bundle.js"></script>
+</head>
 
-  <body>
-    <div id="vizbox"></div>
-  </body>
+<body>
+  <div id="vizbox"></div>
+</body>
+
 </html>
