--- a/frame.html
+++ b/frame.html
@@ -71,7 +71,11 @@
           &#160;&#8250;&#160; COVIDcast
         </div>
 
-        <div class="content wide none" id="data-visualization-indicators">
+        <div
+          class="content wide none"
+          id="data-visualization-indicators"
+          style="padding-left: 0; padding-right: 0; padding-top: 0;"
+        >
           <div>
             <h1 style="text-align: center;">Realtime COVID-19 Indicators</h1>
             <div id="vizbox"></div>
