--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>COVID-19 Delphi Dashboard</title>
-
-  <link rel="icon" href="/favicon.ico" />
-
-  <link rel="stylesheet" href="./maps/mapbox-gl.css" />
-  <link rel="stylesheet" href="./global.css" />
-  <link rel="stylesheet" href="./build/bundle.css" />
-  <script src="https://unpkg.com/@webcomponents/custom-elements"></script>
-  <script defer src="./build/bundle.js"></script>
-</head>
-
-<body>
-  <div id="vizbox"></div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>COVID-19 Delphi Dashboard</title><link rel="icon" href="/favicon.ico"/><link href="build/bundle.css" rel="stylesheet"></head><body><div id="vizbox"></div><script src="build/bundle.js"></script></body></html>
