--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.ico" />
   </head>
 
-  <body>
-    <div id="vizbox"></div>
+  <body style="margin: 0;">
+    <div id="vizbox" style="width: 100vw; height: 100vh;"></div>
   </body>
 </html>
