closes #243 ie banner

--- a/src/frame.html
+++ b/src/frame.html
@@ -74,7 +74,13 @@
         >
           <div>
             <h1 style="text-align: center;">Realtime COVID-19 Indicators</h1>
-            <div id="vizbox"></div>
+            <div id="vizbox">
+              <div class="ie-banner" style="display: none;">
+                <div>
+                  Internet Explorer 11 is not longer supported by this application. Please upgrade your browser.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="content" id="about-covidcast">
