--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   </head>
 
   <body class="test-page">
-    <div id="vizbox"></div>
+    <div id="vizbox">
+      <div class="ie-banner" style="display: none;">
+        <div>Internet Explorer is not longer supported by this application. Please upgrade your browser.</div>
+      </div>
+    </div>
   </body>
 </html>
