--- a/src/frame.html
+++ b/src/frame.html
@@ -77,7 +77,8 @@
             <div id="vizbox">
               <div class="ie-banner" style="display: none;">
                 <div>
-                  Internet Explorer 11 is not longer supported by this application. Please upgrade your browser.
+                  Internet Explorer 11 is no longer supported. We encourage you to use a more modern web browser, such
+                  as Firefox, Chrome, or Safari.
                 </div>
               </div>
             </div>
