--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
   <body class="test-page">
     <div id="vizbox">
       <div class="ie-banner" style="display: none;">
-        <div>Internet Explorer is not longer supported by this application. Please upgrade your browser.</div>
+        <div>
+          Internet Explorer 11 is no longer supported. We encourage you to use a more modern web browser, such as
+          Firefox, Chrome, or Safari.
+        </div>
       </div>
     </div>
   </body>
