--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,101 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Home - COVIDcast - Delphi Research Group - Carnegie Mellon University</title>
+    <meta
+      content="Carnegie Mellon's Delphi Research Group has partnered with numerous organizations, including Facebook and Google, to track COVID-19 and better forecast its spread at the county level."
+      name="description"
+    />
+    <meta content="Carnegie Mellon University" name="author" />
 
-    <title>COVID-19 Delphi Dashboard</title>
+    <meta content="Home - COVIDcast - Delphi Research Group - Carnegie Mellon University" property="og:title" />
+    <meta
+      content="Carnegie Mellon's Delphi Research Group has partnered with numerous organizations, including Facebook and Google, to track COVID-19 and better forecast its spread at the county level."
+      property="og:description"
+    />
+    <meta content="website" property="og:type" />
+    <meta content="https://covidcast.cmu.edu/index.html" property="og:url" />
+    <meta content="https://covidcast.cmu.edu/images/covidcast-900x600.png" property="og:image" />
 
-    <link rel="icon" href="/favicon.ico" />
+    <link
+      href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="//www.cmu.edu/favicon.ico" rel="icon" />
+    <link href="//www.cmu.edu/favicon-152.png" rel="apple-touch-icon-precomposed" />
+    <meta content="#9f0000" name="msapplication-TileColor" />
+    <meta content="//www.cmu.edu/favicon-144.png" name="msapplication-TileImage" />
+
+    <link href="//www.cmu.edu/common/standard-v6/css/main.min.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="//www.cmu.edu/common/standard-v6/css/print.min.css" media="print" rel="stylesheet" type="text/css" />
+
+    <!-- Google Tag Manager -->
+    <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5Q36JQ"></script>
+    <script>
+      var dataLayer = (window.dataLayer = window.dataLayer || []);
+      dataLayer.push({ fireGtm: true });
+    </script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&amp;l=' + l : '';
+        j.async = true;
+        j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-5Q36JQ');
+    </script>
   </head>
 
-  <body class="test-page">
-    <div id="vizbox">
+  <body>
+    <header class="viz-header">
+      <div class="roof red invert">
+        <div>
+          <a class="wordmark" href="//www.cmu.edu/">Carnegie Mellon University</a>
+          <form action="https://web-search.andrew.cmu.edu/search" class="search">
+            <input name="entqr" type="hidden" value="3" />
+            <input name="entsp" type="hidden" value="a" />
+            <input name="sort" type="hidden" value="date:D:L:d1" />
+            <input name="output" type="hidden" value="xml_no_dtd" />
+            <input name="client" type="hidden" value="default_frontend" />
+            <input name="ud" type="hidden" value="1" />
+            <input name="oe" type="hidden" value="UTF-8" />
+            <input name="ie" type="hidden" value="UTF-8" />
+            <input name="proxystylesheet" type="hidden" value="default_frontend" />
+            <label
+              ><span>Search</span>
+              <input name="q" placeholder="Search" title="Type keywords into this box, then press enter." />
+            </label>
+            <button title="Submit" type="submit">Search</button> <input name="site" type="hidden" value="" />
+          </form>
+        </div>
+      </div>
+      <div class="viz-name">
+        <h1><a href="index.html" class="title-link">COVIDcast</a> | Real-time COVID-19 Indicators</h1>
+        <h2>
+          <a class="group-link" href="https://delphi.cmu.edu/" target="_blank" rel="noopener noreferrer"
+            >by Delphi Research Group</a
+          >
+        </h2>
+      </div>
+      <div class="viz-mission">
+        The <span class="mission-link">mission</span> of the
+        <a href="#" class="team-link">CMU Delphi COVID-19 Response Team</a> is to help compat the COVID-19 pandemic and
+        save lives and livelihoods.
+      </div>
+    </header>
+    <main id="vizbox">
       <div class="ie-banner" style="display: none;">
         <div>
           Internet Explorer 11 is no longer supported. We encourage you to use a more modern web browser, such as
           Firefox, Chrome, or Safari.
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
