--- a/src/index.html
+++ b/src/index.html
@@ -77,12 +77,13 @@
         </div>
       </div>
       <div class="viz-name">
-        <h1><a href="index.html" class="title-link">COVIDcast</a> | Real-time COVID-19 Indicators</h1>
-        <h2>
+        <h1><a href="index.html">COVIDcast</a></h1>
+        <h2>Real-time COVID-19 Indicators</h2>
+        <h3>
           <a class="group-link" href="https://delphi.cmu.edu/" target="_blank" rel="noopener noreferrer"
             >by Delphi Research Group</a
           >
-        </h2>
+        </h3>
       </div>
       <div class="viz-mission">
         The <span class="mission-link">mission</span> of the
