--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,17 @@
             </label>
             <button title="Submit" type="submit">Search</button> <input name="site" type="hidden" value="" />
           </form>
+          <a class="viz-menu-button">
+            <svg viewBox="0 0 512 512">
+              <path
+                d="M432 176H80c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zM432 272H80c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16zM432 368H80c-8.8 0-16-7.2-16-16s7.2-16 16-16h352c8.8 0 16 7.2 16 16s-7.2 16-16 16z"
+              />
+            </svg>
+          </a>
+          <div class="viz-menu">
+            <a href="#">API</a>
+            <a href="#">Team</a>
+          </div>
         </div>
       </div>
       <div class="viz-name">
