--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="viz-mission">
         The <span class="mission-link">mission</span> of the
-        <a href="#" class="team-link">CMU Delphi COVID-19 Response Team</a> is to help compat the COVID-19 pandemic and
+        <a href="#" class="team-link">CMU Delphi COVID-19 Response Team</a> is to help combat the COVID-19 pandemic and
         save lives and livelihoods.
       </div>
     </header>
