--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,15 @@
     <link href="//www.cmu.edu/common/standard-v6/css/print.min.css" media="print" rel="stylesheet" type="text/css" />
 
     <!-- Google Tag Manager -->
-    <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5Q36JQ"></script>
     <script>
       var dataLayer = (window.dataLayer = window.dataLayer || []);
       dataLayer.push({ fireGtm: true });
     </script>
     <script>
       (function (w, d, s, l, i) {
+        if ('<%= process.env.NODE_ENV %>' === 'development') {
+          return;
+        }
         w[l] = w[l] || [];
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
         var f = d.getElementsByTagName(s)[0],
