mark page as active

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
       <nav id="nav">
         <ul>
           <li><a href="https://delphi.cmu.edu/">DELPHI</a></li>
-          <li><a href="https://covidcast.cmu.edu">COVIDcast</a></li>
+          <li class="active"><a href="https://covidcast.cmu.edu">COVIDcast</a></li>
           <li><a href="https://delphi.cmu.edu/blog">Blog</a></li>
           <li><a href="https://covidcast.cmu.edu/methodology.html">About the Data</a></li>
           <li><a href="https://covidcast.cmu.edu/survey.html">Surveys</a></li>
