--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,27 @@
     <meta content="https://covidcast.cmu.edu/images/covidcast-900x600.png" property="og:image" />
 
     <link
-      href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="//www.cmu.edu/favicon.ico" rel="icon" />
-    <link href="//www.cmu.edu/favicon-152.png" rel="apple-touch-icon-precomposed" />
+    <link href="https://www.cmu.edu/favicon.ico" rel="icon" />
+    <link href="https://www.cmu.edu/favicon-152.png" rel="apple-touch-icon-precomposed" />
     <meta content="#9f0000" name="msapplication-TileColor" />
     <meta content="//www.cmu.edu/favicon-144.png" name="msapplication-TileImage" />
 
-    <link href="//www.cmu.edu/common/standard-v6/css/main.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="//www.cmu.edu/common/standard-v6/css/print.min.css" media="print" rel="stylesheet" type="text/css" />
+    <link
+      href="https://www.cmu.edu/common/standard-v6/css/main.min.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://www.cmu.edu/common/standard-v6/css/print.min.css"
+      media="print"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <!-- Google Tag Manager -->
     <script>
@@ -116,8 +126,8 @@
         </ul>
       </nav>
     </footer>
-    <script src="//www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
-    <script src="//www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
-    <script src="//www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
   </body>
 </html>
