prepare for embedding again

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,27 @@
     <meta content="https://covidcast.cmu.edu/images/covidcast-900x600.png" property="og:image" />
 
     <link
-      href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="//www.cmu.edu/favicon.ico" rel="icon" />
-    <link href="//www.cmu.edu/favicon-152.png" rel="apple-touch-icon-precomposed" />
+    <link href="https://www.cmu.edu/favicon.ico" rel="icon" />
+    <link href="https://www.cmu.edu/favicon-152.png" rel="apple-touch-icon-precomposed" />
     <meta content="#9f0000" name="msapplication-TileColor" />
-    <meta content="//www.cmu.edu/favicon-144.png" name="msapplication-TileImage" />
+    <meta content="https://www.cmu.edu/favicon-144.png" name="msapplication-TileImage" />
 
-    <link href="//www.cmu.edu/common/standard-v6/css/main.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="//www.cmu.edu/common/standard-v6/css/print.min.css" media="print" rel="stylesheet" type="text/css" />
+    <link
+      href="https://www.cmu.edu/common/standard-v6/css/main.min.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://www.cmu.edu/common/standard-v6/css/print.min.css"
+      media="print"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <!-- Google Tag Manager -->
     <script>
@@ -55,8 +65,8 @@
     </script>
   </head>
 
-  <body>
-    <div id="container">
+  <body class="viz-body">
+    <div id="container" class="viz-container">
       <header class="viz-header">
         <div class="roof red invert">
           <div>
@@ -84,15 +94,15 @@
           <h1><a href="index.html">COVIDcast</a></h1>
           <h2>Real-time COVID-19 Indicators</h2>
           <h3>
-            <a class="group-link" href="https://delphi.cmu.edu/" target="_blank" rel="noopener noreferrer"
+            <a class="viz-group-link" href="https://delphi.cmu.edu/" target="_blank" rel="noopener noreferrer"
               >by Delphi Research Group</a
             >
           </h3>
         </div>
         <div class="viz-mission">
-          The <span class="mission-link">mission</span> of the
-          <a href="#" class="team-link">CMU Delphi COVID-19 Response Team</a> is to help combat the COVID-19 pandemic
-          and save lives and livelihoods.
+          The <span class="viz-mission-link">mission</span> of the
+          <a href="#" class="viz-team-link">CMU Delphi COVID-19 Response Team</a> is to help combat the COVID-19
+          pandemic and save lives and livelihoods.
         </div>
       </header>
       <main id="vizbox">
@@ -104,7 +114,7 @@
         </div>
       </main>
     </div>
-    <footer>
+    <footer class="viz-footer">
       <nav id="nav">
         <ul>
           <li><a href="https://delphi.cmu.edu/">DELPHI</a></li>
@@ -116,8 +126,8 @@
         </ul>
       </nav>
     </footer>
-    <script src="//www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
-    <script src="//www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
-    <script src="//www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
+    <script src="https://www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
   </body>
 </html>
