--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         </div>
       </main>
     </div>
-    <footer class="viz-footer">
+    <!-- <footer class="viz-footer">
       <nav id="nav">
         <ul>
           <li><a href="https://delphi.cmu.edu/">DELPHI</a></li>
@@ -125,7 +125,7 @@
           <li><a href="https://covidcast.cmu.edu/covid19-response-team.html">Team</a></li>
         </ul>
       </nav>
-    </footer>
+    </footer> -->
     <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
     <script src="https://www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
     <script src="https://www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
