--- a/src/index.html
+++ b/src/index.html
@@ -114,18 +114,17 @@
         </div>
       </main>
     </div>
-    <!-- <footer class="viz-footer">
+    <footer class="viz-footer">
       <nav id="nav">
         <ul>
-          <li><a href="https://delphi.cmu.edu/">DELPHI</a></li>
+          <li><a href="https://delphi.cmu.edu/">Delphi</a></li>
           <li class="active"><a href="https://covidcast.cmu.edu">COVIDcast</a></li>
+          <li><a href="https://cmu-delphi.github.io/delphi-epidata/">Data</a></li>
           <li><a href="https://delphi.cmu.edu/blog">Blog</a></li>
-          <li><a href="https://covidcast.cmu.edu/methodology.html">About the Data</a></li>
-          <li><a href="https://covidcast.cmu.edu/survey.html">Surveys</a></li>
-          <li><a href="https://covidcast.cmu.edu/covid19-response-team.html">Team</a></li>
+          <li><a href="https://github.com/cmu-delphi/">Github</a></li>
         </ul>
       </nav>
-    </footer> -->
+    </footer>
     <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
     <script src="https://www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
     <script src="https://www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
