--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
       <header class="viz-header">
         <div class="roof red invert">
           <div>
-            <a class="wordmark" href="//www.cmu.edu/">Carnegie Mellon University</a>
+            <a class="wordmark" href="https://www.cmu.edu/">Carnegie Mellon University</a>
             <a aria-haspopup="true" aria-label="Menu" class="menu-btn" href="#nav"><b>—</b><b>—</b><b>—</b></a>
             <form action="https://web-search.andrew.cmu.edu/search" class="search">
               <input name="entqr" type="hidden" value="3" />
