--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="preconnect" href="https://fonts.openmaptiles.org" />
 
     <!-- Google Tag Manager -->
     <script>
@@ -134,7 +135,7 @@
         </ul>
       </nav>
     </footer>
-    <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script>
+    <!-- <script src="https://www.cmu.edu/common/standard-v6/js/list.min.js" type="text/javascript"></script> -->
     <script src="https://www.cmu.edu/common/standard-v6/js/jquery-1.10.1.min.js" type="text/javascript"></script>
     <script src="https://www.cmu.edu/common/standard-v6/js/main.min.js" type="text/javascript"></script>
   </body>
