fix title base line

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
           <h2>Real-time COVID-19 Indicators</h2>
           <h3>
             <a class="viz-group-link" href="https://delphi.cmu.edu/" target="_blank" rel="noopener noreferrer"
-              >by Delphi Research Group</a
+              >by the Delphi Group</a
             >
             -
             <a
