--- a/src/embed.html
+++ b/src/embed.html
@@ -37,7 +37,7 @@
         <div class="content wide none" id="data-visualization-indicators">
           <div>
             <div id="vizbox">
-              <div class="ie-banner" style="display: none;">
+              <div class="ie-banner" style="display: none">
                 <div>
                   Internet Explorer 11 is no longer supported. We encourage you to use a more modern web browser, such
                   as Firefox, Chrome, or Safari.
