--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
         </nav>
       </header>
       <main id="vizbox">
-        <div class="ie-banner" style="display: none;">
+        <div class="ie-banner" style="display: none">
           <div>
             Internet Explorer 11 is no longer supported. We encourage you to use a more modern web browser, such as
             Firefox, Chrome, or Safari.
