--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,8 @@
       rel="stylesheet"
       type="text/css"
     />
-  <body style="
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-">
+  </head>
+  <body style="margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh">
     <main id="vizbox">
       <div class="ie-banner" style="display: none">
         <div>
