--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic&display=swap"
       rel="stylesheet"
