--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,32 @@
     />
   </head>
   <body style="margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh">
+    <nav class="nav-container" style="box-shadow: 0 3px 5px -1px rgb(0 0 0 / 15%)">
+      <div class="uk-navbar-container uk-navbar uk-float-right" data-uk-navbar="offset: 0" style="margin: 15px">
+        <ul class="uk-navbar-nav nav-burger">
+          <li>
+            <a class="uk-navbar-toggle nav-toggle" href="" uk-icon="menu" title="Toggle Menu" aria-expanded="true"></a>
+            <div class="nav-mobile uk-dropdown uk-dropdown-stack" uk-dropdown="mode: click;">
+              <ul class="uk-nav uk-navbar-dropdown-nav">
+                <li data-mode="overview" class="nav-dropdown-child"><a href="/">Map Overview</a></li>
+                <li data-mode="landing" class="nav-dropdown-child"><a href="/landing">Mobile Landing</a></li>
+                <li data-mode="mobile" class="nav-dropdown-child"><a href="/mobile">Mobile Overview</a></li>
+                <li data-mode="mobile-indicator" class="nav-dropdown-child">
+                  <a href="/mobile-indicator">Mobile Indicator</a>
+                </li>
+                <li data-mode="timelapse" class="nav-dropdown-child"><a href="/timelapse">Timelapse</a></li>
+                <li data-mode="top10" class="nav-dropdown-child"><a href="/top10">Top 10</a></li>
+                <li data-mode="single" class="nav-dropdown-child"><a href="/single">Single Region</a></li>
+                <li data-mode="survey-results" class="nav-dropdown-child">
+                  <a href="/survey-results">Survey Results</a>
+                </li>
+                <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <main id="vizbox">
       <div class="ie-banner" style="display: none">
         <div>
