--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,600,600italic,700,700italic&display=swap"
       rel="stylesheet"
       type="text/css"
     />
@@ -19,12 +19,12 @@
             <a class="uk-navbar-toggle nav-toggle" href="" uk-icon="menu" title="Toggle Menu" aria-expanded="true"></a>
             <div class="nav-mobile uk-dropdown uk-dropdown-stack" uk-dropdown="mode: click;">
               <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li data-mode="overview" class="nav-dropdown-child"><a href="/">Map Overview</a></li>
-                <li data-mode="landing" class="nav-dropdown-child"><a href="/landing">Mobile Landing</a></li>
-                <li data-mode="mobile" class="nav-dropdown-child"><a href="/mobile">Mobile Overview</a></li>
-                <li data-mode="mobile-indicator" class="nav-dropdown-child">
-                  <a href="/mobile-indicator">Mobile Indicator</a>
+                <li data-mode="overview" class="nav-dropdown-child"><a href="/">Overview</a></li>
+                <li data-mode="landing" class="nav-dropdown-child"><a href="/landing">Landing</a></li>
+                <li data-mode="indicator" class="nav-dropdown-child">
+                  <a href="/indicator">Indicator Details</a>
                 </li>
+                <li data-mode="old" class="nav-dropdown-child"><a href="/old">Map Overview</a></li>
                 <li data-mode="timelapse" class="nav-dropdown-child"><a href="/timelapse">Timelapse</a></li>
                 <li data-mode="top10" class="nav-dropdown-child"><a href="/top10">Top 10</a></li>
                 <li data-mode="single" class="nav-dropdown-child"><a href="/single">Single Region</a></li>
