fix: labs to latest changes

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
                   <a href="/survey-results">Survey Results</a>
                 </li>
                 <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
+                <li data-mode="lab" class="nav-dropdown-child"><a href="/lab">Lab</a></li>
               </ul>
             </div>
           </li>
