--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
         <ul class="uk-navbar-nav nav-burger">
           <li>
             <a class="uk-navbar-toggle nav-toggle" href="" uk-icon="menu" title="Toggle Menu" aria-expanded="true"></a>
-            <div class="nav-mobile uk-dropdown uk-dropdown-stack" uk-dropdown="mode: click;" style="right: 0; left: unset">
+            <div
+              class="nav-mobile uk-dropdown uk-dropdown-stack"
+              uk-dropdown="mode: click;"
+              style="right: 0; left: unset"
+            >
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li data-mode="overview" class="nav-dropdown-child"><a href="/">Overview</a></li>
                 <li data-mode="landing" class="nav-dropdown-child"><a href="/landing">Landing</a></li>
