--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
               style="right: 0; left: unset"
             >
               <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li data-mode="landing" class="nav-dropdown-child"><a href="/">COVIDCast Overview</a></li>
+                <li data-mode="landing" class="nav-dropdown-child"><a href="/">COVIDcast Overview</a></li>
                 <li data-mode="summary" class="nav-dropdown-child"><a href="/summary">Location Summary</a></li>
                 <li data-mode="indicator" class="nav-dropdown-child">
                   <a href="/indicator">Indicator Details</a>
