--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
             >
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li data-mode="landing" class="nav-dropdown-child"><a href="/">COVIDcast Overview</a></li>
-                <li data-mode="summary" class="nav-dropdown-child"><a href="/summary">Location Summary</a></li>
+                <li data-mode="summary" class="nav-dropdown-child"><a href="/summary">Explore a Location</a></li>
                 <li data-mode="indicator" class="nav-dropdown-child">
-                  <a href="/indicator">Indicator Details</a>
+                  <a href="/indicator">Explore an Indicator</a>
                 </li>
                 <li data-mode="classic" class="nav-dropdown-child"><a href="/classic">Classic COVIDcast</a></li>
                 <li data-mode="timelapse" class="nav-dropdown-child"><a href="/timelapse">Timelapse</a></li>
