feat: start with signal-dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,18 @@
                   <a href="/indicator">Explore an Indicator</a>
                 </li>
                 <li data-mode="classic" class="nav-dropdown-child"><a href="/classic">Classic COVIDcast</a></li>
-                <li data-mode="timelapse" class="nav-dropdown-child"><a href="/timelapse">Timelapse</a></li>
-                <li data-mode="top10" class="nav-dropdown-child"><a href="/top10">Top 10</a></li>
-                <li data-mode="single" class="nav-dropdown-child"><a href="/single">Single Region</a></li>
                 <li data-mode="survey-results" class="nav-dropdown-child">
                   <a href="/survey-results">Survey Results</a>
                 </li>
+                <li data-mode="signal-dashboard" class="nav-dropdown-child">
+                  <a href="/signal-dashboard">Signal Dashboard</a>
+                </li>
                 <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
+                <li class="uk-nav-divider"></li>
                 <li data-mode="lab" class="nav-dropdown-child"><a href="/lab">Lab</a></li>
+                <li data-mode="timelapse" class="nav-dropdown-child"><a href="/timelapse">Timelapse</a></li>
+                <li data-mode="top10" class="nav-dropdown-child"><a href="/top10">Top 10</a></li>
+                <li data-mode="single" class="nav-dropdown-child"><a href="/single">Single Region</a></li>
               </ul>
             </div>
           </li>
