--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
                 <li data-mode="survey-results" class="nav-dropdown-child">
                   <a href="/survey-results">Survey Results</a>
                 </li>
-                <li data-mode="signal-dashboard" class="nav-dropdown-child">
-                  <a href="/signal-dashboard">Signal Dashboard</a>
+                <li data-mode="indicator-status" class="nav-dropdown-child">
+                  <a href="/indicator-status">Indicator Status Overview</a>
                 </li>
                 <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
                 <li class="uk-nav-divider"></li>
