feat: prepare dashboard mode

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
                 <li data-mode="data-anomalies" class="nav-dropdown-child">
                   <a href="/data-anomalies">Data Anomalies</a>
                 </li>
+                <li data-mode="dashboard" class="nav-dropdown-child">
+                  <a href="/dashboard">Dashboard</a>
+                </li>
                 <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
                 <li class="uk-nav-divider"></li>
                 <li data-mode="lab" class="nav-dropdown-child"><a href="/lab">Lab</a></li>
