fix(dahboard): rename to Dashboard Builder

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                   <a href="/data-anomalies">Data Anomalies</a>
                 </li>
                 <li data-mode="dashboard" class="nav-dropdown-child">
-                  <a href="/dashboard">Dashboard</a>
+                  <a href="/dashboard">Dashboard Builder</a>
                 </li>
                 <li data-mode="export" class="nav-dropdown-child"><a href="/export">Export Data</a></li>
                 <li class="uk-nav-divider"></li>
