--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 </li>
                 <li data-mode="classic" class="nav-dropdown-child"><a href="/classic">Classic COVIDcast</a></li>
                 <li data-mode="survey-results" class="nav-dropdown-child">
-                  <a href="/survey-results">Survey Results</a>
+                  <a href="/survey-results">CTIS Survey Results</a>
                 </li>
                 <li data-mode="indicator-status" class="nav-dropdown-child">
                   <a href="/indicator-status">Indicator Status Overview</a>
