fix: avoid CTIS survey

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                   <a href="/correlation">Explore Correlations</a>
                 </li>
                 <li data-mode="survey-results" class="nav-dropdown-child">
-                  <a href="/survey-results">CTIS Survey Results</a>
+                  <a href="/survey-results">CTIS Results</a>
                 </li>
                 <li data-mode="indicator-status" class="nav-dropdown-child">
                   <a href="/indicator-status">Indicator Status Overview</a>
