--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
               style="right: 0; left: unset"
             >
               <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li data-mode="landing" class="nav-dropdown-child"><a href="/">COVIDcast Overview</a></li>
-                <li data-mode="summary" class="nav-dropdown-child"><a href="/summary">Explore a Location</a></li>
+                <li data-mode="summary" class="nav-dropdown-child"><a href="/">Explore a Location</a></li>
                 <li data-mode="indicator" class="nav-dropdown-child">
                   <a href="/indicator">Explore an Indicator</a>
                 </li>
